--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
